--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ Servers/
 
 # properties file #
 *.properties
+# not include the properties file existed in the src/main/resources folder
+!src/main/resources/*.properties
